# fastwriter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_SCOWL.md
build-tools/: fastwriter-launcher.sh.in  fastwriter.desktop.in
design/diagram/: Class.drawio  class.drawio  ownership.drawio
doc/doxygen/: Doxyfile.conf  doxyfile.conf
doc/doxygen/html/: _concrete_state_8h_source.html  _main_menu_8h_source.html  _resource_holder_8h_source.html  _resource_manager_8h_source.html  _state_8h_source.html  _state_manager_8h_source.html  _wellcome_8h_source.html  annotated.html  annotated_dup.js  class_concrete_state1-members.html  class_concrete_state1.html  class_concrete_state1.js  class_concrete_state1__coll__graph.map  class_concrete_state1__inherit__graph.md5  class_concrete_state1_a164e501f6cb344ace8d2bc68a03d3cf5_cgraph.map  class_concrete_state1_a164e501f6cb344ace8d2bc68a03d3cf5_cgraph.md5  class_concrete_state2-members.html  class_concrete_state2.html  class_concrete_state2.js  class_concrete_state2__coll__graph.map  class_concrete_state2__inherit__graph.md5  class_concrete_state2_a0b737e6f9165e42c6273bca7ea0a64ac_cgraph.map  class_concrete_state2_a0b737e6f9165e42c6273bca7ea0a64ac_cgraph.md5  class_main_menu-members.html  class_main_menu.html  class_main_menu.js  class_main_window.html  class_resource_holder-members.html  class_resource_holder.html  class_resource_holder.js  class_resource_holder_a4d48b233dc2abcebb9feb2b13dde79a6_icgraph.map  class_resource_holder_a4d48b233dc2abcebb9feb2b13dde79a6_icgraph.md5  class_resource_holder_ad6da70c98c1ea6fca4cc163cd75c085b_icgraph.map  class_resource_holder_ad6da70c98c1ea6fca4cc163cd75c085b_icgraph.md5  class_resource_manager-members.html  class_resource_manager.html  class_resource_manager.js  class_resource_manager_aac23d305b6af2a4be7e1d1cbdb9c2d2d_cgraph.map  class_resource_manager_aac23d305b6af2a4be7e1d1cbdb9c2d2d_cgraph.md5  class_state-members.html  (+67 more)
doc/doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  (+16 more)
licenses/: LICENSES
res/dictionaries/: en.dic
res/shaders/: circle.frag  fade.frag
res/sounds/: LICENSE
res/src/about/: about.json  about.tps
res/src/diffty-menu/: diffty-menu.json  diffty-menu.tps
res/src/help/: help.json  help.tps
res/src/letters/: letter-maker.sh
res/src/main-menu/: main-menu.json  main-menu.tps
res/src/numbers/: numbers.json  numbers.tps
res/src/paused/: paused.json  paused.tps
res/src/quit-confirm/: quit-confirm.json  quit-confirm.tps
res/src/restart-confirm/: restart-confirm.json  restart-confirm.tps
res/src/results/: results.json  results.tps
res/src/scores/: scores.json  scores.tps
res/src/started/: started.json  started.tps
res/src/starting/: starting.json  starting.tps
res/src/wellcome/: wellcome.json  wellcome.tps
src/: Fastwriter.pro  Main.cpp
src/ConfManager/: GameConf.cpp  GameConfManager.cpp  GameConfManager.h
src/Config/: Config.h.in
src/Confs/: ExpertConf.cpp  HardConf.cpp  HardConf.h  NormalConf.cpp  NormalConf.h
src/Controls/: CleanersControl.cpp  CountDownControl.cpp  CountDownControl.h  LifesControl.h  PointsControl.cpp  PointsControl.h  ResultsControl.cpp  ResultsControl.h  ScoresControl.cpp  ScoresControl.h  ShiftModeControl.cpp  ShiftModeControl.h  TimeControl.h  WantPointsControl.cpp  WantPointsControl.h
src/Game/: Game.cpp  Game.h
src/Gui/: BidirectionalBar.cpp  BidirectionalBar.h  GraphicMenu.cpp  GraphicMenu.h  OneDirectionBar.cpp  OneDirectionBar.h  TextureBar.cpp  TextureBar.h  TextureNumber.h  TextureNumber.inl
src/Menu/: GraphicMenu.cpp  GraphicMenu.h
src/Menus/: ConcreteState.cpp  ConcreteState.h  MainMenu.cpp  MainMenu.h
src/MusicPlayer/: MusicPlayer.cpp  MusicPlayer.h
src/ResourceManager/: ResourceHolder.h  ResourceHolder.inl  ResourceManager.cpp  ResourceManager.h
src/ScoresFile/: ScoresFile.cpp  ScoresFile.h
src/SoundPlayer/: SoundPlayer.cpp  SoundPlayer.h
src/StateManager/: State.cpp  State.h  StateManager.cpp  StateManager.h
src/States/: About.cpp  Black.cpp  DifftyMenu.cpp  DifftyMenu.h  Help.cpp  Help.h  MainMenu.cpp  MainMenu.h  Paused.cpp  Paused.h  QuitConfirm.cpp  RestartConfirm.cpp  RestartConfirm.h  Results.cpp  Results.h  Scores.cpp  Scores.h  Started.cpp  Started.h  Starting.cpp  Starting.h  Wellcome.cpp  Wellcome.h
src/States/About/: About.cpp  About.h
src/States/Black/: Black.cpp  Black.h
src/States/DifficultyMenu/: DifftyMenu.cpp  DifftyMenu.h
src/States/Game/Paused/: Paused.cpp  Paused.h
src/States/Game/Paused/QuitConfirm/: QuitConfirm.cpp  QuitConfirm.h
src/States/Game/Paused/RestartConfirm/: RestartConfirm.cpp  RestartConfirm.h
src/States/Game/Started/: Started.cpp  Started.h
src/States/Game/Started/ConfManager/: GameConf.cpp  GameConf.h  GameConfManager.cpp  GameConfManager.h
src/States/Game/Started/Confs/: ExpertConf.cpp  ExpertConf.h  HardConf.cpp  HardConf.h  NormalConf.cpp  NormalConf.h
src/States/Game/Started/Controls/CleanersControl/: CleanersControl.cpp  CleanersControl.h
src/States/Game/Starting/: Starting.cpp  Starting.h
src/States/MainMenu/: MainMenu.cpp  MainMenu.h
src/States/Transitions/: Transition.cpp  Transition.h
src/States/Transitions/CircleClose/: CircleClose.cpp  CircleClose.h
src/States/Transitions/CircleOpen/: CircleOpen.cpp  CircleOpen.h
src/States/Transitions/Fade/: Fade.cpp  Fade.h
src/States/Wellcome/: Wellcome.cpp  Wellcome.h
src/Transitions/: CircleClose.cpp  CircleOpen.cpp  CircleOpen.h  Fade.cpp  Transition.cpp  Transition.h
src/Transitions/Fade/: Fade.h
src/WordMap/: WordMap.cpp  WordMap.h
(+18 files in other folders)
